Build:Change body tag to main tag

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title> FORM</title>
 </head>
 
-<body>
+<main>
     <div class="container">
         <header>
             <h1>Akan Name Generator</h1>
@@ -42,6 +42,6 @@
         </div>
     </div>
 
-</body>
+</main>
 
 </html>
