Build: Add JS script to HTML

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <main>
+    <script src="JS/script.jsgit status"></script>
     <div class="container">
         <header>
             <h1>Akan Name Generator</h1>
