--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         <div class=" form1 ">
             <form class="form ">
                 <div class="label-1">
-                    <label for="day of birth" class="label">DAY<input type="number" placeholder="DD" required></label>
-                    <label for="month of birth" class="label">MONTH<input type="number" placeholder="MM" required></label>
-                    <label for="year of birth" class="label">YEAR<input type="number" placeholder="YYYY" required></label>
+                    <label for="day of birth" class="label">DAY<input type="number" placeholder="DD" min="1"  max="31"  required></label>
+                    <label for="month of birth" class="label">MONTH<input type="number" placeholder="MM" min="1"  max="12" required></label>
+                    <label for="year of birth" class="label">YEAR<input type="number" min="1800" max="2022"  placeholder="YYYY" required></label>
                 </div>
                 <div class="gender">
                     <p>Select your gender</p>
