Delete class from input element

--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
         <header>
             <h1>Akan Name Generator</h1>
             <div class="header-paragraph">
-                <p>This web application takes your birthday details and calculates the day of the week you were born depending on your gender, gives you your Akan Name. Akan names are derived from Ghanian culture where children are given their first name
-                    as a 'day names' which corresponds with the day ofthe week they were born.</p>
-                <p>Generate your own Akan name by filling in your details and clicking submit </p>
+                <p>Akan names are derived from Ghanian culture where children are given their first names depending on the day of the week they were born.
+                    <p>This application takes your birthday details and calculates the day of the week you were born depending on your gender then gives you your Akan Name
+                    </p>
+                    <p>Generate your own Akan name by filling in your details and clicking submit </p>
             </div>
 
         </header>
@@ -25,7 +26,7 @@
             <form class="form ">
                 <div class="label-1">
                     <label for="day of birth" class="label">DAY<input type="number" placeholder="DD" min="1"  max="31"  required></label>
-                    <label for="month of birth" class="label">MONTH<input type="number" placeholder="MM" min="1"  max="12" required></label>
+                    <label for="month of birth" class="label">MONTH<input type="number"  placeholder="MM" min="1"  max="12" required></label>
                     <label for="year of birth" class="label">YEAR<input type="number" min="1800" max="2022"  placeholder="YYYY" required></label>
                 </div>
                 <div class="gender">
