Add class to Submit button for styling

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     </div>
 
                 </div>
-                <button id="btn" type="submit" onclick="Day()">Generate Name</button>
+                <button class="submit" type="submit">Generate Name</button>
 
             </form>
         </div>
